# SaddleClimb

./: README.md  example.py  pyproject.toml  saddleclimb.py  saddleclimb_mix.py  saddleclimb_test.py  test.py  testf2.traj  testi2.traj
.github/workflows/: python-package.yml
example/minimizations/atop/: CONTCAR  DOSCAR  EIGENVAL  OSZICAR  OUTCAR  POSCAR  XDATCAR  opt.traj  slurm-7594374.out  vasp.out  vaspout.h5  vasprun.xml
example/minimizations/fcc_1/: CONTCAR  DOSCAR  EIGENVAL  OSZICAR  OUTCAR  POSCAR  XDATCAR  opt.traj  slurm-7594375.out  vasp.out  vaspout.h5  vasprun.xml
example/minimizations/fcc_2/: CONTCAR  DOSCAR  EIGENVAL  KPOINTS  OSZICAR  OUTCAR  POSCAR  XDATCAR  init.traj  opt.traj  run_opt.py  slurm-7594376.out  submit.sh  vasp.out  vaspout.h5  vasprun.xml
example/minimizations/hcp/: CONTCAR  DOSCAR  EIGENVAL  OSZICAR  OUTCAR  POSCAR  XDATCAR  init.traj  opt.traj  slurm-7594377.out  submit.sh  vasp.out  vaspout.h5  vasprun.xml
examples/EMT_with_coadsorbates/final/: init.traj  opt.traj
examples/EMT_with_coadsorbates/init/: init.traj  opt.traj
examples/EMT_with_coadsorbates/saddleclimb/: climb.traj  run_climb.py
old_work/: saddleclimb_0.py
saddleclimb/: saddleclimb.py  saddleclimb_ase.py
saddleclimb/old_work/: saddleclimb_1.py
tests/: test_saddleclimb.py  test_saddleclimb_ase.py
vib/: cache.36x++.json  cache.36x+.json  cache.36x--.json  cache.36x-.json  cache.36y++.json  cache.36y+.json  cache.36y--.json  cache.36y-.json  cache.36z++.json  cache.36z+.json  cache.36z--.json  cache.36z-.json  cache.eq.json
(+2497 files in other folders)
